Created join-game and create-game in view folder. Created routes to them from index file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,19 @@
-<h1>Hello!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+</head>
+<body>
+    <h1>Welcome to Fruit Salad Game</h1>
+    
+    <a href="/join-game">
+        <h2>Join Game</h2>
+    </a>
+    
+    <a href="/create-game">
+        <h2>Create Game</h2>
+    </a>
+</body>
+</html>
