--- a/views/create-game.ejs
+++ b/views/create-game.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Create Game</h1>
+    <h2>Game Code: <span><%= gameCode %></span></h2>
     <p>Create game functionality coming soon...</p>
     
     <a href="/">Back to Home</a>
