--- a/views/create-game.ejs
+++ b/views/create-game.ejs
@@ -8,7 +8,12 @@
 <body>
     <h1>Create Game</h1>
     <h2>Game Code: <span><%= gameCode %></span></h2>
-    <p>Create game functionality coming soon...</p>
+    <form action="/create-game" method="POST">
+        <input type="hidden" name="gameCode" value="<%= gameCode %>">
+        <label for="cardsPerPlayer">Cards per player:</label>
+        <input type="number" name="cardsPerPlayer" min="5" max="10" value="5">
+        <button type="submit">Create Game</button>
+    </form>
     
     <a href="/">Back to Home</a>
 </body>
