Client connects to socket

--- a/views/waiting-room.ejs
+++ b/views/waiting-room.ejs
@@ -16,6 +16,9 @@
             <li>Player name functionality coming soon </li>
         </ul>
     </div>
-    
+    <script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+</script>
 </body>
 </html>
