--- a/views/join-game.ejs
+++ b/views/join-game.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Join Game</h1>
-    <form action="/join-game" method="POST">
+    <form action="/join-game" method="POST" id="form">
         <div>
             <label for="playerName">Your Name:</label>
             <input type="text" id="playerName" name="playerName" required>
@@ -20,5 +20,20 @@
     </form>
     
     <a href="/">Back to Home</a>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    
+      var form = document.getElementById('form');
+      var playerName = document.getElementById('playerName');
+    
+      form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        if (playerName.value) {
+          socket.emit('chat message', playerName.value);
+          playerName.value = '';
+        }
+      });
+    </script>
 </body>
 </html>
