Player names now broadcast from server to everyone in an unordered list on the join-game page

--- a/views/join-game.ejs
+++ b/views/join-game.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Join Game</h1>
+    <ul id="waitingRoomPlayers">
     <form action="/join-game" method="POST" id="form">
         <div>
             <label for="playerName">Your Name:</label>
@@ -18,12 +19,13 @@
         </div>
         <button type="submit">Join Game</button>
     </form>
-    
+</ul>
     <a href="/">Back to Home</a>
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
     
+      var waitingRoomPlayers = document.getElementById('waitingRoomPlayers');
       var form = document.getElementById('form');
       var playerName = document.getElementById('playerName');
     
@@ -34,6 +36,13 @@
           playerName.value = '';
         }
       });
+
+      socket.on('chat message', function(msg) {
+    var item = document.createElement('li');
+    item.textContent = msg;
+    waitingRoomPlayers.appendChild(item);
+    window.scrollTo(0, document.body.scrollHeight);
+  });
     </script>
 </body>
 </html>
