Creator of game now can enter their name and is redirected to waiting room

--- a/views/create-game.ejs
+++ b/views/create-game.ejs
@@ -13,8 +13,15 @@
         <label for="cardsPerPlayer">Cards per player:</label>
         <input type="number" name="cardsPerPlayer" min="5" max="10" value="5">
         <button type="submit">Create Game</button>
+        <div>
+            <label for="playerName">Your Name:</label>
+            <input type="text" id="playerName" name="playerName" required>
+        </div>
     </form>
     
+      
+      
     <a href="/">Back to Home</a>
+    
 </body>
 </html>
