--- a/views/waiting-room.ejs
+++ b/views/waiting-room.ejs
@@ -16,6 +16,38 @@
             <li>Player name functionality coming soon </li>
         </ul>
     </div>
+    <ul id="waitingRoomPlayers">
+        <form action="/waiting-room" method="POST" id="form">
+            <input type="hidden" name="gameCode" value="<%= gameCode %>">
+            <div>
+                <label for="playerName">Your Name:</label>
+                <input type="text" id="playerName" name="playerName" required>
+            </div>
+            <button type="submit">Join Game</button>
+        </form>
+    </ul>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
     
+      var waitingRoomPlayers = document.getElementById('waitingRoomPlayers');
+      var form = document.getElementById('form');
+      var playerName = document.getElementById('playerName');
+    
+      form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        if (playerName.value) {
+          socket.emit('chat message', playerName.value);
+          playerName.value = '';
+        }
+      });
+
+      socket.on('chat message', function(msg) {
+    var item = document.createElement('li');
+    item.textContent = msg;
+    waitingRoomPlayers.appendChild(item);
+    window.scrollTo(0, document.body.scrollHeight);
+  });
+    </script>
 </body>
 </html>
